--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.6",
+    "crypto-js": "^3.1.9-1",
     "history": "^4.9.0",
     "i18next": "^15.1.0",
     "immutable": "^4.0.0-rc.12",
