--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,11 @@
   },
   "overrides": [
     {
-      "files": ["**/index.js"],
+      "files": [
+        "**/index.js",
+        "src/resources/**",
+        "src/services/**"
+      ],
       "rules": {
         "import/prefer-default-export": "off"
       }
