--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "shortid": "^2.2.14",
+    "uuid": "^3.3.2",
     "validator": "^10.11.0"
   },
   "devDependencies": {
