--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.6",
     "crypto-js": "^3.1.9-1",
+    "currency-codes": "^1.5.0",
     "history": "^4.9.0",
     "i18next": "^15.1.0",
     "immutable": "^4.0.0-rc.12",
@@ -97,6 +98,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "eslint": "eslint --ext js,jsx src",
+    "eslint-fix": "eslint --fix --ext js,jsx src",
     "jest": "jest",
     "start": "webpack-dev-server --mode development",
     "stylelint": "stylelint \"src/**/*.scss\" \"public/css/*.css\" --config stylelint.config.js",
