--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next": "^15.1.0",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.24.0",
+    "offline-plugin": "^5.0.7",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -61,6 +62,7 @@
     "node-sass": "^4.12.0",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "react-svg-loader": "^3.0.3",
     "sass-loader": "^7.1.0",
     "sinon": "^7.3.2",
     "style-loader": "^0.23.1",
@@ -68,6 +70,7 @@
     "stylelint-config-css-modules": "^1.4.0",
     "stylelint-order": "^2.2.1",
     "stylelint-webpack-plugin": "^0.10.5",
+    "surge": "^0.21.3",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1"
@@ -102,6 +105,7 @@
     "jest": "jest",
     "start": "webpack-dev-server --mode development",
     "stylelint": "stylelint \"src/**/*.scss\" \"public/css/*.css\" --config stylelint.config.js",
+    "surge": "cp public/index.html public/200.html && surge public finance-management.surge.sh && rm public/200.html",
     "test": "stylelint \"src/**/*.scss\" \"public/css/*.css\" --config stylelint.config.js && eslint --ext js,jsx src && jest"
   }
 }
